[package]
name = "phoenix"
version = "0.1.0"
authors = ["Umur Gedik <umurgdk@gmail.com>"]

[dependencies]
#drm={ git="https://github.com/Smithay/drm-rs", branch="master" }
drm="0.3.3"
egl="*"
gbm= { version="*", features=["drm-support"]}
gl="*"
rand="*"
cognitive-graphics = "0.1.0"
failure = "0.1.2"
input="0.4"
udev="0.2"
dbus="0.6"
libc="0.2"